--- a/cook_book/pubspec.yaml
+++ b/cook_book/pubspec.yaml
@@ -35,6 +35,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/launch_logo.png
   fonts:
     - family: Raleway
       fonts:
